# AppDesktop_PenilaianRekapNilai-withRust

./: .gitignore  README.md  myAsking.txt  package-lock.json  package.json  penilaian.js  vite.config.js
UI/: index-absensi.html  index-dataSiswa.html  index-kelulusan.html  index-mapel.html  index-penilaian.html  index-rekapNilai.html  index.html  pengguna.html
UI/CSS/: icon.css  index.css  indexMapel.css  mainContent.css  mapelTb.css  modalSiswa.css  pengguna.css
UI/js/: absensi.js  closeWindow.js  dataSiswa.js  index.js  kelulusan.js  mapel.js  mapelUI.js  namaUser.js  penilaian.js  rekapNilai.js  tauriAPIhelper.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  main.rs
src-tauri/src/commands/: absensi.rs  mapel.rs  mod.rs  nilai.rs  penilaian.rs  siswa.rs
src-tauri/src/logic/: mod.rs  penilaian.rs
src-tauri/src/models/: absensi.rs  mapel.rs  mod.rs  nilai.rs  siswa.rs
