[package] 
name = "app-sistem-penilaian" 
version = "2.2.0" 
description = "Sistem Penilaian & Rekap Nilai Otomatis" 
authors = ["Darma <email@example.com>"] 
license = "MIT" 
repository = "https://github.com/darma/Penilaian" 
edition = "2021" 
 
[build-dependencies] 
tauri-build = { version = "1.5", features = [] }  
 
[dependencies] 
regex = "1.10" 
serde_json = "1.0" 
serde = { version = "1.0", features = ["derive"] } 
tauri = { version = "1.8", features = [ "window-minimize", "window-maximize", "window-unmaximize", "window-start-dragging", "window-unminimize", "window-show", "window-hide", "window-close", "fs-all", "dialog-all", "shell-all", "process-all", "path-all", "http-all"] }  
rusqlite = { version = "0.31", features = ["bundled", "backup"] } 
chrono = { version = "0.4", features = ["serde"] } 
thiserror = "1.0" 
once_cell = "1.19" 
log = "0.4" 
dirs = "5.0" 
fern = "0.6"
